# OpenWeatherPlace

./: CMakeLists.txt  README.md  main.cpp
include/: EnvLoader.h  WeatherClient.h
src/: EnvLoader.cpp  WeatherClient.cpp
